# Oranges

./: .bumpversion.cfg  .cmake-format.json  .config.sh  .ecrc  .editorconfig  .gitattributes  .gitignore  .gitownrc  .markdownlint.json  .nitpick.toml  .pre-commit-config.yaml  .pylintrc  .readthedocs.yaml  .style.yapf  .tool-versions  CHANGELOG.md  CITATION.cff  CMakeLists.txt  CMakePresets.json  CPackConfig.cmake  Dockerfile  Doxyfile  Makefile  OrangesConfig.cmake  README.md  Rakefile  anypkg.json  conanfile.py  conanfile.txt  package.json  requirements.txt
docs/: CMakeLists.txt  colors.py  commands.rst  conf.py  env_variables.rst  finders.rst  generate_rsts.py  index.rst  module_rst_template.txt  modules.rst  process_source_tree.py  properties.rst  requirements.txt  scripts.rst  variables.rst
docs/rst/: env_variables.rst  index.rst  modules.rst  targets.rst  todo.rst
docs/scripts/: install_fftw.rst  run_test_on_real_hardware.rst  update_cmakeformat_config.rst
help/: CMakeLists.txt  MANIFEST.in  commands.py  doc_block.py  help.py  modules.py  paths.py  printing.py  pyproject.toml  setup.py  targets.py
help/oranges_help/: __init__.py  commands.py  doc_block.py  main.py  modules.py  paths.py  printing.py  properties.py  targets.py
help/scripts/: install_help.cmake  post_build.cmake  pre_build.cmake
modules/: CMakeLists.txt
modules/code_generation/: CMakeLists.txt  OrangesGenerateBuildTypeHeader.cmake  OrangesGenerateExportHeader.cmake  OrangesGeneratePlatformHeader.cmake  OrangesGenerateStandardHeaders.cmake  OrangesSWIG.cmake  UseFaust.cmake  UseProtobuf.cmake
modules/code_signing/: Usecodesign.cmake  Usewraptool.cmake
modules/config_files/: LemonsInstallDeps.cmake  LemonsParseProjectConfigFile.cmake  LemonsRunClean.cmake
modules/cpack/: LemonsDefaultCPackSettings.cmake  LemonsDefaultCpackSettings.cmake  LemonsSetDefaultCpackGenerator.cmake  OrangesInstallSystemLibs.cmake
modules/dependencies/: CMakeLists.txt  OrangesDownloadFile.cmake  OrangesFetchRepository.cmake  OrangesFindSystemPackageManager.cmake  OrangesInstallPackages.cmake  OrangesWipeCacheTarget.cmake  OrangesWrapAutotoolsProject.cmake
modules/documentation/: CMakeLists.txt  OrangesDocsBuildConfig.cmake  OrangesDoxygenConfig.cmake  OrangesGeneratePropertiesJSON.cmake  OrangesGraphViz.cmake  OrangesGraphVizConfig.cmake  OrangesGraphviz.cmake  OrangesSphinx.cmake
modules/finders/: FindAccelerate.cmake  FindCatch2.cmake  FindIPP.cmake  FindJUCE.cmake  FindLink.cmake  FindMIPP.cmake  FindMTS-ESP.cmake  FindNE10.cmake  FindSampleRate.cmake  Findccache.cmake  Findclang-tidy.cmake  Findcodesign.cmake  Findcppcheck.cmake  Findcpplint.cmake  Findharu.cmake  Findinclude-what-you-use.cmake  Findpffft.cmake  Findpluginval.cmake  Findusb.cmake  Findwraptool.cmake  Findxcodebuild.cmake  OrangesFindPackageHelpers.cmake
modules/general/: BVBrandFlags.cmake  CMakeLists.txt  LemonsCmakeDevTools.cmake  LemonsDefaultProjectSettings.cmake  LemonsDefaultTarget.cmake  LemonsDeprecations.cmake  LemonsFileUtils.cmake  LemonsGetCPM.cmake  LemonsJsonUtils.cmake  LemonsStaticLibraryHelpers.cmake  LinuxLSBInfo.cmake  OrangesAllIntegrations.cmake  OrangesBuildTypeMacros.cmake  OrangesCcache.cmake  OrangesClangFormat.cmake  OrangesCoverageFlags.cmake  OrangesCreateDefaultDocsTarget.cmake  OrangesDefaultCMakeSettings.cmake  OrangesDefaultProjectSettings.cmake  OrangesDefaultTarget.cmake  OrangesDefaultWarnings.cmake  OrangesDownloadFile.cmake  OrangesExportHeader.cmake  OrangesFetchRepository.cmake  OrangesFileUtils.cmake  OrangesFindPackageHelpers.cmake  OrangesFunctionArgumentHelpers.cmake  OrangesGeneratorExpressions.cmake  OrangesIPO.cmake  OrangesInstallPackages.cmake  OrangesJsonUtils.cmake  OrangesLibraryABIControl.cmake  OrangesListUtils.cmake  OrangesSourceFileUtils.cmake  OrangesUninstallTarget.cmake  OrangesUniversalBinary.cmake  Usexcodebuild.cmake  lemons_AggregateTargets.cmake
modules/helper_targets/: CMakeLists.txt  CXXConcepts.cmake  OrangesAllIntegrations.cmake  OrangesCcache.cmake  OrangesCoverageFlags.cmake  OrangesDebugTarget.cmake  OrangesDefaultTarget.cmake  OrangesDefaultWarnings.cmake  OrangesIPO.cmake  OrangesIPOTarget.cmake  OrangesOptimizationFlags.cmake  OrangesUnityBuild.cmake
modules/installing/: CMakeLists.txt  LemonsSetDefaultCpackGenerator.cmake  OrangesDefaultCPackSettings.cmake  OrangesDefaultInstallSettings.cmake  OrangesGeneratePkgConfig.cmake  OrangesInstallSystemLibs.cmake  OrangesSetDefaultCpackGenerator.cmake  OrangesUninstallTarget.cmake
modules/integrations/: LemonsAllIntegrations.cmake  LemonsCcache.cmake  LemonsClangTidy.cmake  LemonsCppCheck.cmake  LemonsCppLint.cmake  LemonsIncludeWhatYouUse.cmake  OrangesAllIntegrations.cmake  OrangesCcache.cmake  OrangesClangTidy.cmake  OrangesCppCheck.cmake  OrangesCppLint.cmake  OrangesGraphVizConfig.cmake  OrangesIncludeWhatYouUse.cmake
modules/internal/: BVBrandFlags.cmake  LemonsCmakeDevTools.cmake  OrangesCmakeDevTools.cmake  OrangesConfigurationPostfixes.cmake  OrangesDeprecateDirectoryScopedCommands.cmake  OrangesDeprecations.cmake  OrangesFindPackageHelpers.cmake  OrangesFunctionArgumentHelpers.cmake  OrangesGeneratorExpressions.cmake  OrangesSetUpCache.cmake  lemons_AggregateTargets.cmake
modules/juce/: CMakeLists.txt  LemonsAppUtilities.cmake  LemonsAssetsHelpers.cmake  LemonsJuceModuleUtilities.cmake  LemonsJuceUtilities.cmake  OrangesAppUtilities.cmake  OrangesAssetsHelpers.cmake  OrangesJuceModuleUtilities.cmake  OrangesJuceUtilities.cmake
modules/platform/: LemonsDefaultPlatformSettings.cmake  LinuxLSBInfo.cmake  OrangesDefaultPlatformSettings.cmake  OrangesFindUnixShell.cmake  OrangesFindWindowsShell.cmake
modules/plugins/: CallForEachPluginFormat.cmake  LemonsAddPrivateSDKs.cmake  LemonsPluginSigning.cmake  LemonsPluginUtilities.cmake  OrangesClapFormat.cmake  OrangesPluginUtilities.cmake
modules/shells/: OrangesFindUnixShell.cmake  OrangesFindWindowsShell.cmake  OrangesShellTargetProperties.cmake
modules/static_analysis/: OrangesClangTidy.cmake  (+4 more)
tests/: CMakeLists.txt  exportTestMain.cpp  platformTestMain.cpp
(+218 files in other folders)
